--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,76 @@
-/* You can add global styles to this file, and also import other style files */
+// // // normalize.css
+@import './app/styles/init-css';
+@import './app/styles/colors';
+// // google-fonts.css
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+// // google icons
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
+// // grid system
+// @import '~primeflex/primeflex.css';
+// // primeNg
+// @import '~primeicons/primeicons.css';
+// //@import '~primeng/resources/themes/lara-light-blue/theme.css';
+// @import '~primeng/resources/themes/lara-dark-blue/theme.css';
+// @import '~primeng/resources/primeng.min.css';
+// // body
+// body {
+//     font-family: 'Roboto', sans-serif;
+//     font-size: 14px;
+//     // color: $black;
+//     // background-color: $white;
+// }
+// a {
+//     color: $white;
+//     text-decoration: none;
+// }
+// // google icons
+.app-icon {
+    font-family: 'Material Symbols Outlined';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+}
+
+// // toastr
+@import '~ngx-toastr/toastr';
+//
+// .container {
+//     margin: 1rem;
+//     padding: 1rem;
+// }
+// html,
+// body {
+//     height: 100%;
+// }
+// body {
+//     margin: 0;
+//     font-family: Roboto, "Helvetica Neue", sans-serif;
+// }
+//
+body {
+    padding: 0;
+    margin: 0!important;
+}
+
+* {
+    font-family: 'Almarai', sans-serif;
+}
+
+body {
+    margin: 0;
+    font-family: 'Almarai', sans-serif!important;
+    //
+    background-color: $bgColor;
+    color: $white;
+}
+
+//
+//
