here is another commit

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,7 @@
 <footer class="footer">
-    <span>© {{ date | date: 'MMMM, yyyy' }} FinalMCQ All rights reserved, By <span class="by">Muhammad Ali</span></span>
+    <span>© {{ date | date: 'MMMM, yyyy' }} <a routerLink="/register">FinalMCQ</a> All rights reserved, By 
+        <span class="by">
+            <a  href="https://github.com/MuhammadBnAly">Muhammad Ali</a>
+        </span>
+    </span>
 </footer>
