--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="navbar navbar-default" dir="rtl">
     <div class="container ">
         <div class="navbar-header">
-            <a class="navbar-brand" routerLinkActive="active" routerLink="welcome">
+            <a class="navbar-brand" routerLinkActive="active" routerLink="/Welcome">
                 <img src="../../../assets/images/Final.png" alt="">
             </a>
         </div>
