--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -9,12 +9,17 @@
     justify-content: center;
     padding: 0.5rem 1rem;
     height: 65px;
-    color: $black;
-    background-color: lightgray;
+    color: $white;
+    background-color: $bgColorLightr;
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: $green;
+}
+
 .by {
-    color: $bgColor;
+    color: $primary;
     font-weight: bold;
 }
